cambios en json de la api, controllers y routes
